Removed unused code

--- a/SimTECH/SimTECH/Components/SignalIcon.razor
+++ b/SimTECH/SimTECH/Components/SignalIcon.razor
@@ -30,14 +30,13 @@
                 case "Mistake":
                     return Icons.Material.Filled.ErrorOutline;
                 case "Pitstop":
-                    //return Icons.Material.Filled.LocalGasStation;
                     return IconCollection.RefreshDot;
                 case "Swap":
                     return Icons.Material.Filled.SwapVert;
                 case "Caution":
                     return IconCollection.AlertTriangle;
                 case "Death":
-                    return IconCollection.Bandage;
+                    return Icons.Material.Filled.Healing;
                 default:
                     return Icons.Material.Filled.QuestionMark;
             }
