--- a/SimTECH/SimTECH/Pages/Season/DevelopmentEntrants.razor
+++ b/SimTECH/SimTECH/Pages/Season/DevelopmentEntrants.razor
@@ -72,7 +72,7 @@
                 </MudStack>
             </MudPaper>
             <MudPaper Class="flex-grow-1 ">
-                <MudTable Items="@DevelopedEntrants" Dense="true">
+                <MudTable Items="@DevelopedEntrants" Dense="true" id="development-results">
                     <ToolBarContent>
                         <MudText Typo="Typo.h5">Development</MudText>
                         <MudSpacer />
@@ -81,6 +81,7 @@
                             <MudButton StartIcon="@Icons.Material.Filled.Save" Color="Color.Success" Variant="Variant.Filled" OnClick="SaveDevelopment">Save</MudButton>
                         }
                         <MudButton StartIcon="@Icons.Material.Filled.Recycling" Color="Color.Info" Variant="Variant.Filled" OnClick="RunDevelop">Run</MudButton>
+                        <ScreenshotButton TargetId="development-results" />
                     </ToolBarContent>
                     <HeaderContent>
                         <MudTh>Name</MudTh>
