--- a/SimTECH/SimTECH/Pages/Season/ScoreStandings/Standings.razor
+++ b/SimTECH/SimTECH/Pages/Season/ScoreStandings/Standings.razor
@@ -6,11 +6,13 @@
 {
     <MudTabs Outlined="true" Centered="true">
         <MudTabPanel Text="Standings">
-            <MudGrid Spacing="2">
+            <MudGrid Spacing="2" id="standings-numerical-overview">
                 <MudItem xs="12">
                     <MudPaper Height="75px" Class="pa-4">
-                        <MudStack Row="true" Justify="Justify.Center" AlignItems="AlignItems.Center">
+                        <MudStack Row="true" Justify="Justify.SpaceBetween" AlignItems="AlignItems.Center">
+                            <span>e</span>
                             <MudText Typo="Typo.h3">Season standings @(Season.Year)</MudText>
+                            <ScreenshotButton TargetId="standings-numerical-overview" />
                         </MudStack>
                     </MudPaper>
                 </MudItem>
