--- a/SimTECH/SimTECH/Pages/Racing/Practice.razor
+++ b/SimTECH/SimTECH/Pages/Racing/Practice.razor
@@ -56,8 +56,8 @@
                         <CountryFlag Code="@context.Nationality" Size="FlagSize.Small" />
                     </MudStack>
                 </MudTd>
-                <MudTd Class="number-col" Style="@(ViewHelper.SetFullColourstyle(context.Colour, context.Accent))">
-                    <MudText Typo="Typo.caption">@context.Number</MudText>
+                <MudTd Class="number-col">
+                    <NumberDisplay Number="@context.Number" Colour="@context.Colour" Accent="@context.Accent"></NumberDisplay>
                 </MudTd>
                 <MudTd>
                     <MudText>@context.TeamName</MudText>
