--- a/SimTECH/SimTECH/Pages/Racing/Qualy/SingleSessionQualy.razor
+++ b/SimTECH/SimTECH/Pages/Racing/Qualy/SingleSessionQualy.razor
@@ -50,8 +50,8 @@
                     <CountryFlag Code="@context.Nationality" Size="FlagSize.Small" />
                 </MudStack>
             </MudTd>
-            <MudTd Class="number-col-lg" Style="@(ViewHelper.SetFullColourstyle(context.Colour, context.Accent))">
-                <MudText Typo="Typo.caption">@context.Number</MudText>
+            <MudTd Class="number-col-lg">
+                <NumberDisplay Colour="@context.Colour" Accent="@context.Accent">@context.Number</NumberDisplay>
             </MudTd>
             <MudTd>
                 <MudText>@context.TeamName</MudText>
