--- a/SimTECH/SimTECH/Pages/Racing/RaceWeek.razor
+++ b/SimTECH/SimTECH/Pages/Racing/RaceWeek.razor
@@ -118,11 +118,11 @@
                         </MudListItemExtended>
                         <MudListItemExtended T="string" Text="@($"{Model.Race.Track.Length}Km")" SecondaryText="Length" />
                         <MudListItemExtended T="string" Text="@($"{NumberHelper.CalcLapCount(Model.Race.RaceLength, Model.Race.Track.Length)}")" SecondaryText="Laps" />
-                        <MudListItemExtended T="double" Text="@Model.Race.Track.AeroMod.ToString()" SecondaryText="Aero modifier" />
-                        <MudListItemExtended T="double" Text="@Model.Race.Track.ChassisMod.ToString()" SecondaryText="Chassis modifier" />
-                        <MudListItemExtended T="double" Text="@Model.Race.Track.PowerMod.ToString()" SecondaryText="Powertrain modifier" />
-                        <MudListItemExtended T="double" Text="@Model.Race.Track.QualifyingMod.ToString()" SecondaryText="Qualifying modifier" />
-                        <MudListItemExtended T="double" Text="@Model.Race.Track.DefenseMod.ToString()" SecondaryText="Defense modifier" />
+                        <MudListItemExtended T="double" Text="@Model.Race.Track.AeroMod.ToString("F2")" SecondaryText="Aero modifier" />
+                        <MudListItemExtended T="double" Text="@Model.Race.Track.ChassisMod.ToString("F2")" SecondaryText="Chassis modifier" />
+                        <MudListItemExtended T="double" Text="@Model.Race.Track.PowerMod.ToString("F2")" SecondaryText="Powertrain modifier" />
+                        <MudListItemExtended T="double" Text="@Model.Race.Track.QualifyingMod.ToString("F2")" SecondaryText="Qualifying modifier" />
+                        <MudListItemExtended T="double" Text="@Model.Race.Track.DefenseMod.ToString("F2")" SecondaryText="Defense modifier" />
                     </MudListExtended>
                 </MudPaper>
             </MudItem>
