--- a/SimTECH/SimTECH/Components/MudTdResult.razor
+++ b/SimTECH/SimTECH/Components/MudTdResult.razor
@@ -56,9 +56,7 @@
     {
         get
         {
-            var cellStyle = Result.GetResultStyle(LowestScoringPosition);
-
-            return cellStyle;
+            return Result.GetResultStyle(LowestScoringPosition);
         }
     }
 }
