--- a/SimTECH/SimTECH/Pages/Season/Overview.razor
+++ b/SimTECH/SimTECH/Pages/Season/Overview.razor
@@ -3,7 +3,6 @@
 @using SimTECH.Pages.Season.Entrants;
 @using SimTECH.Pages.Season.Stats;
 @using SimTECH.Pages.Season.ScoreStandings
-@inject LeagueService _leagueService
 @inject RaceService _raceService
 @inject SeasonService _seasonService
 @inject SeasonEntrantService _entrantService
@@ -129,70 +128,7 @@
                     </MudTabPanel>
                 }
                 <MudTabPanel Text="Settings">
-                    <MudGrid>
-                        <MudItem xs="12">
-                            <MudPaper Elevation="15" Class="pa-4">
-                                <MudStack Row="true">
-                                    <MudText Typo="Typo.h3">Settings</MudText>
-                                    <MudSpacer />
-                                    <MudButton Variant="Variant.Outlined" Color="Color.Tertiary" StartIcon="@Icons.Material.Outlined.Edit" OnClick="UpdateSeason">Edit</MudButton>
-                                </MudStack>
-                            </MudPaper>
-                        </MudItem>
-                        <MudItem xs="4">
-                            <MudPaper Elevation="15" Class="pa-4 mud-height-full">
-                                <MudText Typo="Typo.h6">Settings 1</MudText>
-                                <MudTextField @bind-Value="Season.Year" Label="Year" ReadOnly="true"></MudTextField>
-                                <MudTextField @bind-Value="Season.MaximumDriversInRace" Label="MaximumDriversInRace" ReadOnly="true"></MudTextField>
-                                <MudText>@(Season.QualifyingFormat)</MudText>
-                                <MudTextField @bind-Value="Season.QualifyingAmountQ2" Label="QualifyingAmountQ2" ReadOnly="true"></MudTextField>
-                                <MudTextField @bind-Value="Season.QualifyingAmountQ3" Label="QualifyingAmountQ3" ReadOnly="true"></MudTextField>
-                                <MudTextField @bind-Value="Season.QualifyingRNG" Label="QualifyingRNG" ReadOnly="true"></MudTextField>
-                                <MudTextField @bind-Value="Season.RunAmountSession" Label="RunAmountSession" ReadOnly="true"></MudTextField>
-                            </MudPaper>
-                        </MudItem>
-                        <MudItem xs="4">
-                            <MudPaper Elevation="15" Class="pa-4 mud-height-full">
-                                <MudText Typo="Typo.h6">Settings 2</MudText>
-                                <MudTextField @bind-Value="Season.GridBonus" Label="GridBonus" ReadOnly="true"></MudTextField>
-                                <MudTextField @bind-Value="Season.RngMinimum" Label="RngMinimum" ReadOnly="true"></MudTextField>
-                                <MudTextField @bind-Value="Season.RngMaximum" Label="RngMaximum" ReadOnly="true"></MudTextField>
-                                <MudTextField @bind-Value="Season.PitMinimum" Label="PitMinimum" ReadOnly="true"></MudTextField>
-                                <MudTextField @bind-Value="Season.PitMaximum" Label="PitMaximum" ReadOnly="true"></MudTextField>
-                                <MudTextField @bind-Value="Season.PointsPole" Label="PointsPole" ReadOnly="true"></MudTextField>
-                                <MudTextField @bind-Value="Season.PointsFastestLap" Label="PointsFastestLap" ReadOnly="true"></MudTextField>
-                            </MudPaper>
-                        </MudItem>
-                        <MudItem xs="4">
-                            <MudPaper Elevation="15" Class="pa-4 mud-height-full">
-                                <MudText Typo="Typo.h6">Points per position</MudText>
-                                @if (Season.PointAllotments != null)
-                                {
-                                    <MudSimpleTable Dense="true">
-                                        <thead>
-                                            <tr>
-                                                <th>#</th>
-                                                <th>Points</th>
-                                            </tr>
-                                        </thead>
-                                        <tbody>
-                                            @foreach (var allotment in Season.PointAllotments)
-                                            {
-                                                <tr>
-                                                    <td class="font-caption">@allotment.Position</td>
-                                                    <td class="font-caption">@allotment.Points</td>
-                                                </tr>
-                                            }
-                                        </tbody>
-                                    </MudSimpleTable>
-                                }
-                                else
-                                {
-                                    <MudAlert Variant="Variant.Outlined" Severity="Severity.Error">Where are the friggin point allotments then?</MudAlert>
-                                }
-                            </MudPaper>
-                        </MudItem>
-                    </MudGrid>
+                    <Settings />
                 </MudTabPanel>
             </MudTabs>
         </CascadingValue>
@@ -230,35 +166,18 @@
     {
         if (Season != null)
         {
-            var error = await _seasonService.ActivateSeason(Season.Id);
+            var error = await _seasonService.ActivateSeason(SeasonId);
 
             if (error == null)
             {
                 Season.State = State.Active; // NOTE: It always changes to active if started
+                NextRace = await _raceService.GetNextRaceOfSeason(SeasonId);
                 _snackbar.Add($"Season {Season.Year} has been activated!", Severity.Success);
             }
             else
             {
                 _snackbar.Add(error, Severity.Error);
             }
-        }
-    }
-
-    async Task UpdateSeason()
-    {
-        var editModel = new EditSeasonModel(Season);
-        // unless I see a reason to retrieve this for a reason elsewhere on this page
-        var leagues = await _leagueService.GetLeagues();
-
-        var parameters = new DialogParameters { ["Model"] = editModel, ["Leagues"] = leagues };
-
-        var dialog = await _dialogService.ShowAsync<SeasonEditor>("Modify season", parameters);
-        var result = await dialog.Result;
-
-        if (!result.Canceled && result.Data != null && result.Data is Season updatedItem)
-        {
-            await _seasonService.UpdateSeason(updatedItem);
-            Season = updatedItem;
         }
     }
 
@@ -290,7 +209,13 @@
         _nav.NavigateTo($"/raceweek/{NextRace.Id}");
     }
 
-    async Task ShowQualyBattles() => _ = await _dialogService.ShowAsync<QualyBattles>("QualifyingBattles", new DialogParameters { ["SeasonId"] = SeasonId });
+    async Task ShowQualyBattles() => 
+        _ = await _dialogService.ShowAsync<QualyBattles>("QualifyingBattles", new DialogParameters { ["SeasonId"] = SeasonId });
+
+    async Task GoAddEntrants()
+    {
+        
+    }
 
     void GoToAddEntrants() => _nav.NavigateTo($"/entrantwizard/{SeasonId}");
     void GoToComponentUsage() => _nav.NavigateTo($"/components/{SeasonId}");
